Vybrali jsme pro vás article + icons

--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
             .souvisejici {
                 list-style-image: url(imgs/arrow.svg);
             }
+
+            i {
+                color: #555;
+            }
+            
+            .fa-facebook:hover {
+                color: #0d5dff;
+            }
+
+            .fa-twitter:hover {
+                color: #1DA1F2;
+            }
+
+            .fa-print:hover, .fa-comment:hover {
+                color: #1f428a;
+            }
         </style>
     </head>
 
@@ -66,7 +82,7 @@
                 <i class="fab fa-facebook" onclick="alert('Vyskakovací okno Facebooku')"></i>
                 <i class="fab fa-twitter" onclick="alert('Vyskakovací okno Twitteru')"></i>
                 <i class="fas fa-print" onclick="alert('Možnosti tisku')"></i>
-                <a href="https://www.idnes.cz/revue/spolecnost/belgicka-princezna-elisabeth-20-let-kralovna.A211025_132042_lidicky_zar/diskuse"><i class="fas fa-comment" style="color: black;"></i></a>
+                <a href="https://www.idnes.cz/revue/spolecnost/belgicka-princezna-elisabeth-20-let-kralovna.A211025_132042_lidicky_zar/diskuse"><i class="fas fa-comment"></i></a>
                 <p>Je mladá, půvabná, bystrá, nebojácná a jmenuje se Elisabeth, celým jménem Elisabeth Theresia Maria Helena. Princezna, která 25.&nbsp;října slaví dvacetiny, podle zákona o následnictví z roku 1991 usedne po svém otci, králi Philippovi&nbsp;(61), jednoho dne na belgický trůn.</p>
                 <figure>
                     <img src="imgs/princezna.jpg" alt="Belgická princezna Elisabeth Theresia Maria Helena">
@@ -111,6 +127,30 @@
                         </a></li>
                     </ul>
                 </section>
+            </article>
+            <article>
+                <h2>Vybrali jsme pro vás</h2>
+                <article>
+                    <a href="https://1gr.cz/log/score.aspx?page=cl-cas-DFA&box=recommended&place=2&type=Article&id=A211026_111037_literatura_kiz&url=https%3A%2F%2Frevue.idnes.cz%2F_servix%2Frecombee%2Fcollector.aspx%3Frecommendation%3Da93b3eb2862be1c3474692358ec54c02%26page%3DA211026_111037_literatura_kiz%26url%3Dhttps%253a%252f%252fwww.idnes.cz%252fkultura%252fliteratura%252fdavid-hecl-pilot-mluvi-k-vam-kapitan-kniha-martin-moravec.A211026_111037_literatura_kiz%253fzdroj%253dvybava_recombee">
+                        <img src="imgs/kapitan.jpg" alt="Pilot David Hecl">
+                        <h3>Vadí pilotům potlesk pasažérů? Odpověď odhaluje kapitán David Hecl</h3>
+                    </a>
+                    <p>Novinář a vedoucí čtvrtečního Magazínu DNES Martin Moravec vydává další knihu rozhovorů. Po neurochirurgovi Vladimíru...</p>
+                </article>
+                <article>
+                    <a href="https://1gr.cz/log/score.aspx?page=cl-cas-DFA&box=recommended&place=3&type=Article&id=A211027_100217_lidicky_zar&url=https%3A%2F%2Frevue.idnes.cz%2F_servix%2Frecombee%2Fcollector.aspx%3Frecommendation%3Da93b3eb2862be1c3474692358ec54c02%26page%3DA211027_100217_lidicky_zar%26url%3Dhttps%253a%252f%252fwww.idnes.cz%252frevue%252fspolecnost%252ftomas-verner-brusle-manzelka-tammy-sutanova-stardance.A211027_100217_lidicky_zar%253fzdroj%253dvybava_recombee">
+                        <img src="imgs/tomas-verner.jpeg" alt="Krasobruslař Tomáš Verner se svou manželkou Tammy Sutanovou a synem Tomášem">
+                        <h3>Dlouho jsem byl mimo její záběr, říká o manželce Tomáš Verner</h3>
+                    </a>
+                    <p>Bývalý krasobruslař Tomáš Verner (35) je přes rok a půl ženatý s Tammy Sutanovou, se kterou má syna. V primáckém pořadu...</p>
+                </article>
+                <article>
+                    <a href="https://1gr.cz/log/score.aspx?page=cl-cas-DFA&box=recommended&place=12&type=Article&id=A211028_181448_lidicky_zar&url=https%3A%2F%2Frevue.idnes.cz%2F_servix%2Frecombee%2Fcollector.aspx%3Frecommendation%3Da93b3eb2862be1c3474692358ec54c02%26page%3DA211028_181448_lidicky_zar%26url%3Dhttps%253a%252f%252fwww.idnes.cz%252frevue%252fspolecnost%252fstardance-covid-tanecnici-zmeny-babcakova-mirai.A211028_181448_lidicky_zar%253fzdroj%253dvybava_recombee">
+                        <img src="imgs/tanecnici.jpg" alt="Účastníci taneční soutěže StarDance">
+                        <h3>Covid stopl Babčákovou a Miraie Navrátila. Vymění se i tanečníci StarDance</h3>
+                    </a>
+                    <p>Česká televize ohlásila mimořádné změny v sestavě letošních soutěžících StarDance. Kvůli covidu a povinné karanténě...</p>
+                </article>
             </article>
         </main>
     </body>
