Footer and favicon

--- a/index.html
+++ b/index.html
@@ -6,35 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/c86d4bbdca.js" crossorigin="anonymous"></script>
         <title>iDNES | Příspěvek</title>
-        <style>
-            .logo {
-                width: 400px;
-            }
-
-            .autor {
-                font-weight: bold;
-            }
-
-            .souvisejici {
-                list-style-image: url(imgs/arrow.svg);
-            }
-
-            i {
-                color: #555;
-            }
-            
-            .fa-facebook:hover {
-                color: #0d5dff;
-            }
-
-            .fa-twitter:hover {
-                color: #1DA1F2;
-            }
-
-            .fa-print:hover, .fa-comment:hover {
-                color: #1f428a;
-            }
-        </style>
+        <link rel="stylesheet" href="styles.css" type="text/css">
+        <link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon_package_v0.16/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon_package_v0.16/favicon-16x16.png">
     </head>
 
     <body>
@@ -116,7 +90,7 @@
                 <p>V příštích desetiletích však právě monarchie zažijí, pokud jde o ženy coby hlavy států, „revoluci“. Belgie, Nizozemsko, Španělsko, Norsko a Švédsko mají v současné době následnice trůnu, které se připravují na své budoucí poslání.</p>
                 <p><span class="autor">Autor:</span> Jindřich Forejt</p>
                 <section>
-                    <h2>Související</h2>
+                    <h2>SOUVISEJÍCÍ</h2>
                     <ul class="souvisejici">
                         <li><a href="https://www.idnes.cz/revue/spolecnost/princezna-alexia-leonor-elisabeth-studium-anglie.A210901_092942_lidicky_zar">Leonor, Alexia, Elisabeth. Tři princezny vyrazily na studia do Britá...</a></li>
                         <li><a href="https://www.idnes.cz/revue/spolecnost/belgicka-princezna-elisabeth-vojenska-akademie-kral-philippe-kralovna-mathilde.A200520_140312_lidicky_zar">Belgická princezna nastoupí na vojenskou akademii, připraví ji na vládnutí
@@ -129,7 +103,7 @@
                 </section>
             </article>
             <article>
-                <h2>Vybrali jsme pro vás</h2>
+                <h2>VYBRALI JSME PRO VÁS</h2>
                 <article>
                     <a href="https://1gr.cz/log/score.aspx?page=cl-cas-DFA&box=recommended&place=2&type=Article&id=A211026_111037_literatura_kiz&url=https%3A%2F%2Frevue.idnes.cz%2F_servix%2Frecombee%2Fcollector.aspx%3Frecommendation%3Da93b3eb2862be1c3474692358ec54c02%26page%3DA211026_111037_literatura_kiz%26url%3Dhttps%253a%252f%252fwww.idnes.cz%252fkultura%252fliteratura%252fdavid-hecl-pilot-mluvi-k-vam-kapitan-kniha-martin-moravec.A211026_111037_literatura_kiz%253fzdroj%253dvybava_recombee">
                         <img src="imgs/kapitan.jpg" alt="Pilot David Hecl">
@@ -142,7 +116,7 @@
                         <img src="imgs/tomas-verner.jpeg" alt="Krasobruslař Tomáš Verner se svou manželkou Tammy Sutanovou a synem Tomášem">
                         <h3>Dlouho jsem byl mimo její záběr, říká o manželce Tomáš Verner</h3>
                     </a>
-                    <p>Bývalý krasobruslař Tomáš Verner (35) je přes rok a půl ženatý s Tammy Sutanovou, se kterou má syna. V primáckém pořadu...</p>
+                    <p>Bývalý krasobruslař Tomáš Verner&nbsp;(35) je přes rok a půl ženatý s Tammy Sutanovou, se kterou má syna. V primáckém pořadu...</p>
                 </article>
                 <article>
                     <a href="https://1gr.cz/log/score.aspx?page=cl-cas-DFA&box=recommended&place=12&type=Article&id=A211028_181448_lidicky_zar&url=https%3A%2F%2Frevue.idnes.cz%2F_servix%2Frecombee%2Fcollector.aspx%3Frecommendation%3Da93b3eb2862be1c3474692358ec54c02%26page%3DA211028_181448_lidicky_zar%26url%3Dhttps%253a%252f%252fwww.idnes.cz%252frevue%252fspolecnost%252fstardance-covid-tanecnici-zmeny-babcakova-mirai.A211028_181448_lidicky_zar%253fzdroj%253dvybava_recombee">
@@ -153,5 +127,24 @@
                 </article>
             </article>
         </main>
+        <footer>
+			<p>Sledujte <a href="https://www.idnes.cz/">iDNES.cz</a> na: 
+				<a href="https://www.idnes.cz/?setver=touch">mobilní verzi</a> 
+				<a href="idnes.cz/zpravodajstvi-do-emailu">e-mailu</a> 
+				<a href="https://www.idnes.cz/rss">RSS</a> 
+				<a href="https://www.facebook.com/iDNES.cz" rel="external" target="_blank">Facebooku</a> 
+				<a href="https://twitter.com/iDNEScz" rel="external" target="_blank">Twitteru</a> 
+				<a href="https://www.instagram.com/idnescz/" rel="external" target="_blank">Instagramu</a> 
+				<a href="https://www.messenger.com/" rel="external" target="_blank">Messengeru</a>
+			</p>
+			<blockquote>&copy; 1999–2021 MAFRA,&nbsp;a.&nbsp;s., a dodavatelé Profimedia, Reuters, ČTK, AP. Jakékoliv užití obsahu včetně převzetí, šíření či dalšího zpřístupňování článků a fotografií je bez souhlasu MAFRA,&nbsp;a.&nbsp;s., zakázáno. Provozovatelem serveru iDNES.cz je MAFRA,&nbsp;a.&nbsp;s., IČ:&nbsp;45&nbsp;31&nbsp;33&nbsp;51. Vydavatelství MAFRA,&nbsp;a.&nbsp;s., je členem koncernu AGROFERT.</blockquote>
+			<ul>
+				<li onclick="alert('Normálně by vám tu vyskočil kontaktní formulář, ale ten nemam')"><a href="#">Napište nám</a></li>
+				<li><a href="https://www.mafra.cz/portfolio.aspx?y=mafra/portfolio-idnes.htm&cat=internet" rel="external">Reklama</a></li>
+				<li><a href="https://www.mafra.cz/kontakt.aspx?cat=internet#idnes" rel="external">Kontakty</a></li>
+				<li><a href="https://www.idnes.cz/ucet/podminky-pouzivani">Podmínky užití</a></li>
+				<li><a href="https://www.mafra.cz/o-spolecnosti.aspx?y=mafra_all/pouceni.htm&cat=pouceni#osobni-udaje" rel="external">Osobní údaje</a></li>
+			</ul>
+		</footer>
     </body>
 </html>
