--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Belgická princezna Elisabeth slaví 20 let">
+        <meta name="description" content="Co pro Belgii znamenají 20. narozeniny korunní princezny Eliabeth Theresie Marie Heleny?">
 		<meta name="keywords" content="idnes, zprávy, novinky, Belgie, princezna, narozeniny">
 		<meta name="author" content="Filip Stupka">
 		<meta name="robots" content="all, follow">
+        <meta property="og:site_name" content="iDNES">
+        <meta property="og:url" content="https://fildastupka.github.io/idnes-post/">
+        <meta property="og:title" content="Belgická princezna Elisabeth slaví 20 let | iDNES.cz">
+        <meta property="og:image" content="url(imgs/princezna.jpg)">
+        <meta property="og:description" content="Co pro Belgii znamenají 20. narozeniny korunní princezny Eliabeth Theresie Marie Heleny?">
         <script src="https://kit.fontawesome.com/c86d4bbdca.js" crossorigin="anonymous"></script>
-        <title>Belgická princezna Elisabeth slaví 20 let | iDNES</title>
+        <title>Belgická princezna Elisabeth slaví 20 let | iDNES.cz</title>
         <link rel="stylesheet" href="styles.css" type="text/css">
         <link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon_package_v0.16/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon_package_v0.16/favicon-16x16.png">
