Og image, image:alt, description update

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Co pro Belgii znamenají 20. narozeniny korunní princezny Eliabeth Theresie Marie Heleny?">
+        <meta name="description" content="Co pro Belgii znamenají 20. narozeniny korunní princezny Elisabeth Theresie Marie Heleny?">
 		<meta name="keywords" content="idnes, zprávy, novinky, Belgie, princezna, narozeniny">
 		<meta name="author" content="Filip Stupka">
 		<meta name="robots" content="all, follow">
         <meta property="og:site_name" content="iDNES">
         <meta property="og:url" content="https://fildastupka.github.io/idnes-post/">
         <meta property="og:title" content="Belgická princezna Elisabeth slaví 20 let | iDNES.cz">
-        <meta property="og:image" content="url(imgs/princezna.jpg)">
-        <meta property="og:description" content="Co pro Belgii znamenají 20. narozeniny korunní princezny Eliabeth Theresie Marie Heleny?">
+        <meta property="og:image" content="imgs/princezna.jpg">
+        <meta property="og:image:alt" content="Belgická korunní princezna Elisabeth Theresia Maria Helena">
+        <meta property="og:description" content="Co pro Belgii znamenají 20. narozeniny korunní princezny Elisabeth Theresie Marie Heleny?">
         <script src="https://kit.fontawesome.com/c86d4bbdca.js" crossorigin="anonymous"></script>
         <title>Belgická princezna Elisabeth slaví 20 let | iDNES.cz</title>
         <link rel="stylesheet" href="styles.css" type="text/css">
