og:image update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta property="og:site_name" content="iDNES">
         <meta property="og:url" content="https://fildastupka.github.io/idnes-post/">
         <meta property="og:title" content="Belgická princezna Elisabeth slaví 20 let | iDNES.cz">
-        <meta property="og:image" content="imgs/princezna.jpg">
+        <meta property="og:image" content="https://fildastupka.github.io/idnes-post/imgs/princezna.jpg">
         <meta property="og:image:alt" content="Belgická korunní princezna Elisabeth Theresia Maria Helena">
         <meta property="og:description" content="Co pro Belgii znamenají 20. narozeniny korunní princezny Elisabeth Theresie Marie Heleny?">
         <script src="https://kit.fontawesome.com/c86d4bbdca.js" crossorigin="anonymous"></script>
